--- a/example/public/index.html
+++ b/example/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000">
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,400,600&display=swap" rel="stylesheet">
     <title>react-eternal-list</title>
   </head>
 
